fix: fix logo size on mobile (#16)

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ pre, code {
     }
     
     .navbar-brand img {
-        max-height: 50px;
+        max-height: 70px;
         width: auto;
     }
     
